Path Forward glossary desc

--- a/_posts/2023-11-28-path-forward-glossary/path-forward-glossary.Rmd
+++ b/_posts/2023-11-28-path-forward-glossary/path-forward-glossary.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Path Forward Glossary"
 description: |
-  A short description of the post.
+  Definitions of the terms used in the 2024 Path Forward series
 author:
   - name: Brandon Brobst
     url: {}
